# llnltofi

./: .gitignore  .zenodo.json  CITATION.cff  README.md  model.py  pyproject.toml  reconstruct_mesh_2D.py  reconstruct_mesh_3D.py  ruff.toml  utils.py
.github/workflows/: lint.yml  release.yml  test.yml
examples/: filter_synthetic_anomaly.py  histogram.py  reconstruct_mesh_2D.py  reconstruct_mesh_3D.py
llnltofi/: __init__.py  _constants.py  _download.py  _grid.py  _resolution_matrix.py  _spherical.py  convert.py  datasets.json  interpolation.py
tests/: test_convert.py  test_equivalence.py  test_grid.py  test_interpolation.py  test_spherical.py
