[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llnltofi"
version = "0.1.0"
description = "Apply the LLNL-G3D-JPS resolution matrix to velocity models."
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest"]
examples = ["matplotlib", "seaborn", "pandas", "xarray", "netCDF4"]

[tool.hatch.build.targets.wheel]
packages = ["llnltofi"]
